--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,40 @@
 @import url(http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic);
 
 /*------------------------------ 
+CUSTOM
+------------------------------ */
+.caption-wrapper {
+    background: rgba(0,0,0,0.65) !important;
+	/* background: rgba(88,186,1,0.55) !important;  */
+    padding: 25px !important;
+    border-radius: 15px !important;
+    display: inline-block !important;
+}
+
+.caption-line1{
+  font-size: 18px;
+  font-weight: 400;
+  color: #fff;
+  margin-bottom: 10px;
+  letter-spacing: 3px;
+}
+
+.caption-line2{
+  font-size: 55px;
+  font-weight: 800;
+  color: #fff;
+  margin-bottom: 12px;
+}
+
+.caption-line3{
+  font-size: 16px;
+  color: #ddd;
+  margin-bottom: 20px;
+}
+
+
+
+/*------------------------------ 
 BODY
 ------------------------------ */
 body{
