--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ text-shadow:none !important;
 HEADER
 ------------------------------ */
 header{
+background:rgba(0,0,0,.95);
 position:absolute;
 width:100%;
 z-index:100;
