Added blur to modal backdrop

--- a/css/custom.css
+++ b/css/custom.css
@@ -198,11 +198,6 @@ html,
 body {
     overflow-x: hidden;
 }
-
-
-
-
-
 /* #endregion /Menu */
 
 /* #region Home */
@@ -451,6 +446,7 @@ body {
 .sermons__modal {
     position: fixed;
     inset: 0;
+    backdrop-filter: blur(8px);      /* <-- background blur */
     background: rgba(0, 0, 0, .6);
     display: none;
     align-items: center;
